Updated code files for visualizations

--- a/vis2.html
+++ b/vis2.html
@@ -174,7 +174,7 @@
         <div class="call-to-content wow darkback">
             <div id="chart_2c_bar" class="range-container">
                 <h3>Activities Done for years 2012-2017 vs. The time of the Day</h3>
-                <h4> Interactions : Buttons, Range Slider  </h4>
+                <h4> Interactions : Buttons, Date Range Slider  </h4>
                 <h4>Adding in a Range Slider to be able to select a particular time range</h4>
                 <h4>Marathon Training Runs - Morning, Strength Sessions - Nights, Running Sessions - Both Morning/Evening</h4>
                 <h4>Since moving to NY, Cycling sessions because of Citibike Membership, but mostly Strength Sessions</h4>
