--- a/vis4.html
+++ b/vis4.html
@@ -179,10 +179,10 @@
             <!--<p> Different Lines show different years </p>-->
             <!--&lt;!&ndash;<p> Still working on making circles showing the exact data points </p>&ndash;&gt;-->
             <!--</div>-->
-            <div id="chart_5b_line">
+            <div id="chart_5c_line">
                 <!--<h3> The most amazing visualization attempted till now </h3>-->
                 <!--<h3> Was crazy to modify the data in JAVASCRIPT !!! </h3>-->
-                <h3>For every month of the years (2012-2016), trends for the total Activity Minutes captured!!</h3>
+                <h3>For every month of the years (2014-2016), trends for the total Running Mileage captured!!</h3>
                 <p> Different Lines show different years </p>
                 <h4> Hovering over the lines select the nearest point !!! </h4>
                 <!--<p> Still working on making circles showing the exact data points </p>-->
@@ -226,7 +226,7 @@
 <script type="text/javascript" src="assets/visuals/chart_2b_bar.js"></script>
 <script type="text/javascript" src="assets/visuals/chart_2c_bar.js"></script>
 
-<script type="text/javascript" src="assets/visuals/chart_5b_line.js"></script>
+<script type="text/javascript" src="assets/visuals/chart_5c_line.js"></script>
 
 
 </body>
