--- a/vis3.html
+++ b/vis3.html
@@ -184,7 +184,7 @@
                 <!--<h3> Was crazy to modify the data in JAVASCRIPT !!! </h3>-->
                 <h3>For every month of the years (2012-2016), trends for the total Activity Minutes captured!!</h3>
                 <p> Different Lines show different years </p>
-                <h4> Hovering over the lines select the nearest point !!! </h4>
+                <h4> Hovering over the lines select the nearest point !! </h4>
                 <!--<p> Still working on making circles showing the exact data points </p>-->
             </div>
         </div>
